added update plan endpoint
